# QUASI_STABLE

./: LICENSE  README.md  pyproject.toml  requirements.txt
dataset/video/: config.yaml
quasi_stable/: OCR.py  text.py  video.py
src/: main.py  text.py  video.py
